@@ -1,3 +1,10 @@
+2012-04-22  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/arm/bdiv_dbm1c.asm: New file.
+
+	* mpn/arm/v6/mul_1.asm: New file.
+	* mpn/arm/v6/addmul_1.asm: New file.
+
 2012-04-22 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* gen-fac.c: Renamed, was gen-fac_ui.c .
